# hassanpharmacy

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  vercel.json
app/: __init__.py  main.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
live-capture/: change-password.json  daily-expense.json  dashboard.json  expanded-sidebar.json  expense-category.json  new-sale.json  return-item.json  return-policy-notes.json  sales-history.json  sales.json  settings.json  shift-management.json  staff-management.json  stock-report.json
reference-captures/: emareez-batch-current-verified.json  emareez-batch-table-after-dashboard-click.json  emareez-category-add-modal-current-table.json  emareez-category-add-modal-current.json  emareez-category-table-current.json  emareez-customer-history-abdulmanan-live-20260702.json  emareez-customer-history-abdulmanan-modal.json  emareez-customer-history-abdulmanan-print-click.json  emareez-customer-history-abdulmanan-view.json  emareez-customer-history-action-cell-20260702.json  emareez-customer-history-row-html.json  emareez-customer-history-table-html.json  emareez-dashboard-current.json  emareez-dashboard-full.json  emareez-demand-current-verified.json  emareez-demand-current.json  emareez-expense-add-modal-current.json  emareez-expense-category-add-modal-current-table.json  emareez-expense-category-add-modal-current.json  emareez-expense-category-live-20260702.json  (+294 more)
scripts/: cdp_inspect.cjs  (+30 more)
(+156 files in other folders)
