[project]
name = "pharmacy-pms"
version = "0.1.0"
requires-python = ">=3.11"
description = "Hassan Pharmacy Management System"

[tool.vercel]
entrypoint = "api.index:app"

[tool.pdm.dev-dependencies]
dev = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
]
